# lropt

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  CVXPY_parameters.py  Inventory_Test.ipynb  LICENSE  README.md  README.rst  Uncertainty_Sets.ipynb  Untitled.ipynb  context_test.py  genindex.html  index.html  multi_testing.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_portfolio_intro.ipynb
.devcontainer/: devcontainer.json  startup.sh
.github/workflows/: build.yml  deploy.yml  docs.yml
.scratch/: news_testing.py  utils.py
_sources/api/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/getting_started/: index.rst.txt
api/: index.html
api/accepted_functions/: index.html
api/lropt_ruleset/: index.html
api/robust_problem/: index.html
api/uncertainty_sets/: box.html  budget.html  ellipsoidal.html  index.html  norm.html  polyhedral.html
cvxpy_dpp/: CVXPY_parameters.py
docs/: conf.py  index.rst
docs/api/: index.rst
docs/examples/: debug.py  index.rst  portfolio.ipynb  robust_facility.ipynb  robust_knapsack.ipynb  robust_lot_sizing.ipynb  robust_mean_variance_portfolio.ipynb  robust_portfolio.ipynb  robust_prod_inventory.ipynb  robust_svm.ipynb
docs/getting_started/: index.rst  my_first_robust_prob.ipynb  newsvendor_tutorial.ipynb
doctrees/: environment.pickle  index.doctree
doctrees/api/: index.doctree
doctrees/examples/: index.doctree
doctrees/getting_started/: index.doctree
examples/: cvxpy_robust_worst_case.py  index.html  portfolio.html  robust_facility.html  robust_knapsack.html  robust_lot_sizing.html  robust_prod_inventory.html  robust_svm.html  tutorial_deterministic.html
examples/examples/: Quad_test.html  Test_max.html  Test_news.html  Test_news.ipynb
examples/experiments/: intro_example.html  intro_example.ipynb  portfolio_learning.html  test_change.html  test_change.ipynb  tutorial2.html  tutorial2.ipynb  tutorial_deterministic.html  tutorial_deterministic.ipynb  tutorial_learning copy 2.html  tutorial_learning copy 2.ipynb  tutorial_learning copy 3.html  tutorial_learning copy 3.ipynb  tutorial_learning copy.html  tutorial_learning copy.ipynb  tutorial_learning.html  tutorial_learning.ipynb
examples/old_portfolio/: portfolio.html
examples/portfolio/: Simple portfolio example.ipynb  portfolio.ipynb
examples/tests/: Quad_test.html  Test_max.html  Test_news.html  Test_news.ipynb
getting_started/: index.html  robust_prod_inventory.html
getting_started/deterministic_example/: basic_example.html  basic_example.ipynb  direct_comparison_constraints.html  direct_comparison_constraints.ipynb  max_of_affine_uncertainty.html  max_of_affine_uncertainty.ipynb  multiple_uncertain.html  multiple_uncertain.ipynb  multiple_uncertain_constraints.html  multiple_uncertain_constraints.ipynb  quadratic_uncertainty.html  quadratic_uncertainty.ipynb  tutorial_deterministic.html  tutorial_deterministic.ipynb
getting_started/learning_example/: learning_example.html  learning_example.ipynb
getting_started/my_first_robust/: my_first_robust_prob.html  my_first_robust_prob.ipynb
getting_started/robust_problems/: adaptive_robust_lot_sizing.html  robust_knapsack.html  robust_portfolio.html  (+1 more)
html/: genindex.html  objects.inv  search.html  searchindex.js
lro/: __init__.py  extra.py  robust_problem.py  settings.py  uncertain.py  utils.py
lropt/: __init__.py  _version.py  batch.py  batch_dotproduct.py  extra.py  family_parameter.py  parameter.py  robust_problem.py  robust_problem_aug.py  robust_problem_doubleloop.py  robust_problem_orig.py  robust_problem_sgd.py  settings.py  shape_parameter.py  solver_stats.py  torch_expression_generator.py  uncertain.py  uncertain_parameter.py  utils.py
notes/: SGD.ipynb  experiments2.py
rcvx/: __init__.py  robust_problem.py  uncertain.py  utils.py
tests/: settings.py  test_batched_atoms.py  test_box_uncertainty.py  test_budget.py  test_elementwise_dotproduct.py  test_ellipsoidal_uncertainty.py  test_evaluate.py  test_learning.py  test_max.py  test_mro.py  test_multiple_uncertainty.py  test_multistage.py  test_nonrobust_problems.py  test_objective_uncertainty.py  test_polyhedral_uncertainty.py  test_portfolio.py  test_quad.py  test_robust_portfolio.py  test_scenario.py  test_simple_opt.py  test_soc.py  test_support.py
(+278 files in other folders)
