[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lropt"
description="A package for decision-making under uncertainty, using data."
readme = "README.md"
license = {text = "Apache 2.0"}
dynamic = ["version"]
authors = [
{name = "Irina Wang", email="iywang@princeton.edu"},
{name = "Cole Becker", email="colebecker@princeton.edu"},
{name = "Bart Van Parys", email="vanparys@mit.edu"},
{name = "Bartolomeo Stellato", email="bstellato@princeton.edu"}
]
dependencies = [
    "cvxpy>=1.3.0",
    "torch",
    "scikit-learn",
    "cvxpylayers"
]


[tool.setuptools_scm]
# To infer version automatically from git
write_to = "lropt/_version.py"



[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "ruff-lsp",
       "sphinx", "furo", "nbsphinx", "ipython",
       "pandas","matplotlib", "jupyterlab"]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
exclude = ["build", "examples", "instances", "docs", "*__init__.py"]
target-version = "py310"
