[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lropt"
description = "A package for decision-making under uncertainty, using data."
readme = "README.md"
license = { text = "Apache 2.0" }
dynamic = ["version"]
authors = [
    { name = "Irina Wang", email = "iywang@princeton.edu" },
    { name = "Cole Becker", email = "colebecker@princeton.edu" },
    { name = "Bart Van Parys", email = "vanparys@mit.edu" },
    { name = "Bartolomeo Stellato", email = "bstellato@princeton.edu" },
]
dependencies = [
    "scipy>=1.11.2",
    "cvxpy",
    "torch",
    "diffcp @ git+https://github.com/cvxgrp/diffcp@eaac7bc4d637e8854801929ebf01d7db45554f5d",
    "scikit-learn",
    "cvxpylayers @ git+https://github.com/cvxgrp/cvxpylayers@755d93fef4319bd1bdb8390f9c98ff0ebcf8bdea",
    "pandas",
    "tqdm",
    "diffcp @ git+https://github.com/cvxgrp/diffcp@eaac7bc4d637e8854801929ebf01d7db45554f5d",
    "cvxtorch @ git+https://github.com/cvxpy/cvxtorch"
]

[tool.setuptools]
packages = ["lropt"]

[tool.setuptools_scm]
# To infer version automatically from git
write_to = "lropt/_version.py"


[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "ruff-lsp",
    "sphinx",
    "furo",
    "nbsphinx",
    "ipython",
    "matplotlib",
    "jupyterlab",
    "ipdb",
    "marimo",
    "pyscipopt",
]

[tool.ruff]
exclude = [
    "build",
    "examples",
    "instances",
    "docs",
    "cvxpy_dpp",
    "*__init__.py",
]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
